Started implementing HandleLobbyCreationUseCase; Reworked a little CumulativeAchievement fulfillment logic